Better process management in java 5